--- a/frontend/src/components/App/App.css
+++ b/frontend/src/components/App/App.css
@@ -54,7 +54,7 @@
 
 .reply{
   text-align: left;
-  background-color: #0e0e0e;
+  background-color: darkgoldenrod;
   color: var(--font-color);
   padding: 3%;
   border-radius: 5%;
